--- a/advanced/integral/Makefile
+++ b/advanced/integral/Makefile
@@ -4,13 +4,16 @@ CFLAGS=-c -Wall
 SOURCES_DIR=src/
 EXECUTABLE_DIR=bin/
 
-SOURCES=$(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h 
+SOURCES=$(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h $(SOURCES_DIR)preset_function.c
 EXECUTABLE=$(EXECUTABLE_DIR)integral
 
 all: $(SOURCES) $(EXECUTABLE)
 
-$(EXECUTABLE): $(EXECUTABLE_DIR)integral.o
-	$(CC) $(EXECUTABLE_DIR)integral.o -o $(EXECUTABLE)
+$(EXECUTABLE): $(EXECUTABLE_DIR)integral.o $(EXECUTABLE_DIR)preset_function.o
+	$(CC) $(EXECUTABLE_DIR)integral.o $(EXECUTABLE_DIR)preset_function.o -o $(EXECUTABLE)
+
+$(EXECUTABLE_DIR)preset_function.o: makedir $(SOURCES_DIR)preset_function.c $(SOURCES_DIR)preset_function.h
+	$(CC) $(CFLAGS) $(SOURCES_DIR)preset_function.c -o $(EXECUTABLE_DIR)preset_function.o
 
 $(EXECUTABLE_DIR)integral.o: makedir $(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h 
 	$(CC) $(CFLAGS) $(SOURCES_DIR)integral.c -o $(EXECUTABLE_DIR)integral.o
