integral: add math function rootFindDiv2

--- a/advanced/integral/Makefile
+++ b/advanced/integral/Makefile
@@ -4,13 +4,13 @@ CFLAGS=-c -Wall
 SOURCES_DIR=src/
 EXECUTABLE_DIR=bin/
 
-SOURCES=$(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h $(SOURCES_DIR)preset_function.c
+SOURCES=$(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h $(SOURCES_DIR)preset_function.c $(SOURCES_DIR)preset_function.h $(SOURCES_DIR)math_function.c $(SOURCES_DIR)math_function.h
 EXECUTABLE=$(EXECUTABLE_DIR)integral
 
 all: $(SOURCES) $(EXECUTABLE)
 
-$(EXECUTABLE): $(EXECUTABLE_DIR)integral.o $(EXECUTABLE_DIR)preset_function.o
-	$(CC) $(EXECUTABLE_DIR)integral.o $(EXECUTABLE_DIR)preset_function.o -o $(EXECUTABLE)
+$(EXECUTABLE_DIR)integral.o: makedir $(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h $(SOURCES_DIR)preset_function.h $(SOURCES_DIR)math_function.h
+	$(CC) $(CFLAGS) $(SOURCES_DIR)integral.c -o $(EXECUTABLE_DIR)integral.o
 
 $(EXECUTABLE_DIR)preset_function.o: makedir $(SOURCES_DIR)preset_function.c $(SOURCES_DIR)preset_function.h
 	$(CC) $(CFLAGS) $(SOURCES_DIR)preset_function.c -o $(EXECUTABLE_DIR)preset_function.o
@@ -18,6 +18,8 @@ $(EXECUTABLE_DIR)preset_function.o: makedir $(SOURCES_DIR)preset_function.c $(SO
 $(EXECUTABLE_DIR)integral.o: makedir $(SOURCES_DIR)integral.c $(SOURCES_DIR)function.h 
 	$(CC) $(CFLAGS) $(SOURCES_DIR)integral.c -o $(EXECUTABLE_DIR)integral.o
 
+$(EXECUTABLE_DIR)math_function.o: makedir $(SOURCES_DIR)math_function.c $(SOURCES_DIR)math_function.h $(SOURCES_DIR)function.h
+	$(CC) $(CFLAGS) $(SOURCES_DIR)math_function.c -o $(EXECUTABLE_DIR)math_function.o
 
 makedir:
 	mkdir -p $(EXECUTABLE_DIR)
